# AstroFlight

./: .gitignore  Cargo.toml  Makefile  README.md  astroflight.service
.cargo/: config.toml
data/: data_2024-07-21_10-37-48.csv
src/: config.rs  control_checks.rs  main.rs  utils.rs
src/models/: delay.rs  mod.rs  sensors_reading.rs  simulation_entry.rs  stage.rs  state.rs
src/threads/: control_thread.rs  logging_thread.rs  mod.rs  sensor_reading_thread.rs  telemetry_thread.rs
